@@ -6,6 +6,9 @@ $Id$
   	  error
 	In the sepbar, reverse video the view name when it's not set to
 	  view_home (as opposed to the static 'all').
+	The '!' key (bound to 'view -r') now creates a negative version of
+	  the current view and switches to it.  i.e. "show me all the
+	  messages that are not these"
 	
 2.1.1-pre-2
 	Added the 'aim search' command.  The popup on callback may be
